[package]
authors = ["Andrei Litvin <andy314@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
rtt-target = {version = "0.3.1", features=["cortex-m"]}
stm32f4xx-hal = {version="0.13.2", features=["stm32f411"]}

# this lets you use `cargo fix`!
[[bin]]
name = "blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
